@@ -1,6 +1,5 @@
 #!/usr/bin/env python
 
-import threading
 import urlparse
 import urllib2
 import BaseHTTPServer
@@ -8,6 +7,7 @@ import unittest
 import hashlib
 from test import test_support
 mimetools = test_support.import_module('mimetools', deprecated=True)
+threading = test_support.import_module('threading')
 
 # Loopback http server infrastructure
 
